finished inspector, started parse refactor

--- a/Runtime/StdNounou.consolecommands.runtime.asmdef
+++ b/Runtime/StdNounou.consolecommands.runtime.asmdef
@@ -6,7 +6,9 @@
         "GUID:0d65812dd7a6e7240960aa6f680de626",
         "GUID:6ddfdff7ac37b354883336b81ebb5114",
         "GUID:6055be8ebefd69e48b49212b09b47b2f",
-        "GUID:75469ad4d38634e559750d17036d5f7c"
+        "GUID:75469ad4d38634e559750d17036d5f7c",
+        "GUID:d525ad6bd40672747bde77962f1c401e",
+        "GUID:47aa5b03fb7d8494f846a4e20166e57a"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
